<resources>
    <string name="app_name">Tip_App</string>
    <string name="cost_of_service">cost of service</string>
    <string name="how_was_service">How was the service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="okay_service">Okay (15%)</string>
    <string name="round_tip">Round Up Tip</string>
    <string name="calc_btn">Calculate</string>
<string name="tip_amount">Tip Amount : %s</string>

</resources>
